parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> decSeq
Rule 2     dec -> varDec
Rule 3     dec -> FUNC ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
Rule 4     dec -> FUNC type ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
Rule 5     varDec -> type varSpecSeq SEMICOLON
Rule 6     varSpec -> ID
Rule 7     varSpec -> ID ASSIGN literal
Rule 8     varSpec -> ID LCOLC NUMBER RCOLC
Rule 9     varSpec -> ID LCOLC NUMBER RCOLC ASSIGN LBRACE literalSeq RBRACE
Rule 10    type -> NUMBER
Rule 11    type -> STRING
Rule 12    type -> BOOL
Rule 13    param -> type ID
Rule 14    param -> type ID LCOLC RCOLC
Rule 15    block -> varDecList stmtList
Rule 16    stmt -> ifStmt
Rule 17    stmt -> whileStmt
Rule 18    stmt -> forStmt
Rule 19    stmt -> breakStmt
Rule 20    stmt -> returnStmt
Rule 21    stmt -> readStmt
Rule 22    stmt -> writeStmt
Rule 23    stmt -> assign SEMICOLON
Rule 24    stmt -> subCall SEMICOLON
Rule 25    ifStmt -> IF LPAREN exp RPAREN ARROW LBRACE block RBRACE
Rule 26    ifStmt -> IF LPAREN exp RPAREN ARROW RBRACE block RBRACE ELSE LBRACE block RBRACE
Rule 27    whileStmt -> WHILE LPAREN exp RPAREN ARROW LBRACE block RBRACE
Rule 28    forStmt -> FOR LPAREN assign SEMICOLON exp SEMICOLON assign RPAREN ARROW LBRACE block RBRACE
Rule 29    breakStmt -> BREAK SEMICOLON
Rule 30    readStmt -> READ var SEMICOLON
Rule 31    writeStmt -> WRITE expList SEMICOLON
Rule 32    returnStmt -> RETURN SEMICOLON
Rule 33    returnStmt -> RETURN exp SEMICOLON
Rule 34    subCall -> ID LPAREN expList RPAREN
Rule 35    assign -> var ASSIGN exp
Rule 36    assign -> var PLUS_EQ exp
Rule 37    assign -> var MINUS_EQ exp
Rule 38    assign -> var MULTIPLY_EQ exp
Rule 39    assign -> var DIVIDE_EQ exp
Rule 40    assign -> var MOD exp
Rule 41    var -> ID
Rule 42    var -> ID LCOLC exp RCOLC
Rule 43    exp -> exp PLUS exp
Rule 44    exp -> exp MINUS exp
Rule 45    exp -> exp MULTIPLY exp
Rule 46    exp -> exp DIVIDE exp
Rule 47    exp -> exp MOD exp
Rule 48    exp -> exp EQ exp
Rule 49    exp -> exp DIFF exp
Rule 50    exp -> exp LE exp
Rule 51    exp -> exp GE exp
Rule 52    exp -> exp GT exp
Rule 53    exp -> exp LT exp
Rule 54    exp -> exp AND exp
Rule 55    exp -> exp OR exp
Rule 56    exp -> NOT exp
Rule 57    exp -> MINUS exp
Rule 58    exp -> exp INTERROGATION exp COLON exp
Rule 59    exp -> subCall
Rule 60    exp -> var
Rule 61    exp -> literal
Rule 62    exp -> LPAREN exp RPAREN
Rule 63    exp -> param
Rule 64    literal -> CONST_NUMBER
Rule 65    literal -> CONST_STRING
Rule 66    literal -> TRUE
Rule 67    literal -> FALSE
Rule 68    paramList -> paramSeq
Rule 69    paramList -> empty
Rule 70    paramSeq -> param COMMA paramSeq
Rule 71    paramSeq -> param
Rule 72    varDecList -> varDec varDecList
Rule 73    varDecList -> empty
Rule 74    varSpecSeq -> varSpec COMMA varSpecSeq
Rule 75    varSpecSeq -> varSpec
Rule 76    expList -> expSeq
Rule 77    expList -> empty
Rule 78    literalSeq -> literal COMMA literalSeq
Rule 79    literalSeq -> literal
Rule 80    stmtList -> stmt stmtList
Rule 81    stmtList -> empty
Rule 82    decSeq -> dec decSeq
Rule 83    decSeq -> dec
Rule 84    expSeq -> exp COMMA expSeq
Rule 85    expSeq -> exp
Rule 86    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
ARROW                : 3 4 25 26 27 28
ASSIGN               : 7 9 35
BOOL                 : 12
BREAK                : 29
COLON                : 58
COMMA                : 70 74 78 84
CONST_NUMBER         : 64
CONST_STRING         : 65
DIFF                 : 49
DIVIDE               : 46
DIVIDE_EQ            : 39
ELSE                 : 26
EQ                   : 48
FALSE                : 67
FOR                  : 28
FUNC                 : 3 4
GE                   : 51
GT                   : 52
ID                   : 3 4 6 7 8 9 13 14 34 41 42
IF                   : 25 26
INTERROGATION        : 58
LBRACE               : 3 4 9 25 26 27 28
LCOLC                : 8 9 14 42
LE                   : 50
LPAREN               : 3 4 25 26 27 28 34 62
LT                   : 53
MINUS                : 44 57
MINUS_EQ             : 37
MOD                  : 40 47
MULTIPLY             : 45
MULTIPLY_EQ          : 38
NOT                  : 56
NUMBER               : 8 9 10
OR                   : 55
PLUS                 : 43
PLUS_EQ              : 36
RBRACE               : 3 4 9 25 26 26 26 27 28
RCOLC                : 8 9 14 42
READ                 : 30
RETURN               : 32 33
RPAREN               : 3 4 25 26 27 28 34 62
SEMICOLON            : 5 23 24 28 28 29 30 31 32 33
STRING               : 11
TRUE                 : 66
WHILE                : 27
WRITE                : 31
error                : 

Nonterminals, with rules where they appear

assign               : 23 28 28
block                : 3 4 25 26 26 27 28
breakStmt            : 19
dec                  : 82 83
decSeq               : 1 82
empty                : 69 73 77 81
exp                  : 25 26 27 28 33 35 36 37 38 39 40 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 57 58 58 58 62 84 85
expList              : 31 34
expSeq               : 76 84
forStmt              : 18
ifStmt               : 16
literal              : 7 61 78 79
literalSeq           : 9 78
param                : 63 70 71
paramList            : 3 4
paramSeq             : 68 70
program              : 0
readStmt             : 21
returnStmt           : 20
stmt                 : 80
stmtList             : 15 80
subCall              : 24 59
type                 : 4 5 13 14
var                  : 30 35 36 37 38 39 40 60
varDec               : 2 72
varDecList           : 15 72
varSpec              : 74 75
varSpecSeq           : 5 74
whileStmt            : 17
writeStmt            : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . decSeq
    (82) decSeq -> . dec decSeq
    (83) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . FUNC ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
    (4) dec -> . FUNC type ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
    (5) varDec -> . type varSpecSeq SEMICOLON
    (10) type -> . NUMBER
    (11) type -> . STRING
    (12) type -> . BOOL

    FUNC            shift and go to state 5
    NUMBER          shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    program                        shift and go to state 1
    decSeq                         shift and go to state 2
    dec                            shift and go to state 3
    varDec                         shift and go to state 4
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> decSeq .

    $end            reduce using rule 1 (program -> decSeq .)


state 3

    (82) decSeq -> dec . decSeq
    (83) decSeq -> dec .
    (82) decSeq -> . dec decSeq
    (83) decSeq -> . dec
    (2) dec -> . varDec
    (3) dec -> . FUNC ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
    (4) dec -> . FUNC type ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
    (5) varDec -> . type varSpecSeq SEMICOLON
    (10) type -> . NUMBER
    (11) type -> . STRING
    (12) type -> . BOOL

    $end            reduce using rule 83 (decSeq -> dec .)
    FUNC            shift and go to state 5
    NUMBER          shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    dec                            shift and go to state 3
    decSeq                         shift and go to state 10
    varDec                         shift and go to state 4
    type                           shift and go to state 6

state 4

    (2) dec -> varDec .

    FUNC            reduce using rule 2 (dec -> varDec .)
    NUMBER          reduce using rule 2 (dec -> varDec .)
    STRING          reduce using rule 2 (dec -> varDec .)
    BOOL            reduce using rule 2 (dec -> varDec .)
    $end            reduce using rule 2 (dec -> varDec .)


state 5

    (3) dec -> FUNC . ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
    (4) dec -> FUNC . type ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE
    (10) type -> . NUMBER
    (11) type -> . STRING
    (12) type -> . BOOL

    ID              shift and go to state 11
    NUMBER          shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    type                           shift and go to state 12

state 6

    (5) varDec -> type . varSpecSeq SEMICOLON
    (74) varSpecSeq -> . varSpec COMMA varSpecSeq
    (75) varSpecSeq -> . varSpec
    (6) varSpec -> . ID
    (7) varSpec -> . ID ASSIGN literal
    (8) varSpec -> . ID LCOLC NUMBER RCOLC
    (9) varSpec -> . ID LCOLC NUMBER RCOLC ASSIGN LBRACE literalSeq RBRACE

    ID              shift and go to state 15

    varSpecSeq                     shift and go to state 13
    varSpec                        shift and go to state 14

state 7

    (10) type -> NUMBER .

    ID              reduce using rule 10 (type -> NUMBER .)


state 8

    (11) type -> STRING .

    ID              reduce using rule 11 (type -> STRING .)


state 9

    (12) type -> BOOL .

    ID              reduce using rule 12 (type -> BOOL .)


state 10

    (82) decSeq -> dec decSeq .

    $end            reduce using rule 82 (decSeq -> dec decSeq .)


state 11

    (3) dec -> FUNC ID . LPAREN paramList RPAREN ARROW LBRACE block RBRACE

    LPAREN          shift and go to state 16


state 12

    (4) dec -> FUNC type . ID LPAREN paramList RPAREN ARROW LBRACE block RBRACE

    ID              shift and go to state 17


state 13

    (5) varDec -> type varSpecSeq . SEMICOLON

    SEMICOLON       shift and go to state 18


state 14

    (74) varSpecSeq -> varSpec . COMMA varSpecSeq
    (75) varSpecSeq -> varSpec .

    COMMA           shift and go to state 19
    SEMICOLON       reduce using rule 75 (varSpecSeq -> varSpec .)


state 15

    (6) varSpec -> ID .
    (7) varSpec -> ID . ASSIGN literal
    (8) varSpec -> ID . LCOLC NUMBER RCOLC
    (9) varSpec -> ID . LCOLC NUMBER RCOLC ASSIGN LBRACE literalSeq RBRACE

    COMMA           reduce using rule 6 (varSpec -> ID .)
    SEMICOLON       reduce using rule 6 (varSpec -> ID .)
    ASSIGN          shift and go to state 20
    LCOLC           shift and go to state 21


state 16

    (3) dec -> FUNC ID LPAREN . paramList RPAREN ARROW LBRACE block RBRACE
    (68) paramList -> . paramSeq
    (69) paramList -> . empty
    (70) paramSeq -> . param COMMA paramSeq
    (71) paramSeq -> . param
    (86) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID LCOLC RCOLC
    (10) type -> . NUMBER
    (11) type -> . STRING
    (12) type -> . BOOL

    RPAREN          reduce using rule 86 (empty -> .)
    NUMBER          shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    paramList                      shift and go to state 22
    paramSeq                       shift and go to state 23
    empty                          shift and go to state 24
    param                          shift and go to state 25
    type                           shift and go to state 26

state 17

    (4) dec -> FUNC type ID . LPAREN paramList RPAREN ARROW LBRACE block RBRACE

    LPAREN          shift and go to state 27


state 18

    (5) varDec -> type varSpecSeq SEMICOLON .

    FUNC            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    NUMBER          reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    STRING          reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    BOOL            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    $end            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    IF              reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    WHILE           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    FOR             reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    BREAK           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    RETURN          reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    READ            reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    WRITE           reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    ID              reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)
    RBRACE          reduce using rule 5 (varDec -> type varSpecSeq SEMICOLON .)


state 19

    (74) varSpecSeq -> varSpec COMMA . varSpecSeq
    (74) varSpecSeq -> . varSpec COMMA varSpecSeq
    (75) varSpecSeq -> . varSpec
    (6) varSpec -> . ID
    (7) varSpec -> . ID ASSIGN literal
    (8) varSpec -> . ID LCOLC NUMBER RCOLC
    (9) varSpec -> . ID LCOLC NUMBER RCOLC ASSIGN LBRACE literalSeq RBRACE

    ID              shift and go to state 15

    varSpec                        shift and go to state 14
    varSpecSeq                     shift and go to state 28

state 20

    (7) varSpec -> ID ASSIGN . literal
    (64) literal -> . CONST_NUMBER
    (65) literal -> . CONST_STRING
    (66) literal -> . TRUE
    (67) literal -> . FALSE

    CONST_NUMBER    shift and go to state 30
    CONST_STRING    shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33

    literal                        shift and go to state 29

state 21

    (8) varSpec -> ID LCOLC . NUMBER RCOLC
    (9) varSpec -> ID LCOLC . NUMBER RCOLC ASSIGN LBRACE literalSeq RBRACE

    NUMBER          shift and go to state 34


state 22

    (3) dec -> FUNC ID LPAREN paramList . RPAREN ARROW LBRACE block RBRACE

    RPAREN          shift and go to state 35


state 23

    (68) paramList -> paramSeq .

    RPAREN          reduce using rule 68 (paramList -> paramSeq .)


state 24

    (69) paramList -> empty .

    RPAREN          reduce using rule 69 (paramList -> empty .)


state 25

    (70) paramSeq -> param . COMMA paramSeq
    (71) paramSeq -> param .

    COMMA           shift and go to state 36
    RPAREN          reduce using rule 71 (paramSeq -> param .)


state 26

    (13) param -> type . ID
    (14) param -> type . ID LCOLC RCOLC

    ID              shift and go to state 37


state 27

    (4) dec -> FUNC type ID LPAREN . paramList RPAREN ARROW LBRACE block RBRACE
    (68) paramList -> . paramSeq
    (69) paramList -> . empty
    (70) paramSeq -> . param COMMA paramSeq
    (71) paramSeq -> . param
    (86) empty -> .
    (13) param -> . type ID
    (14) param -> . type ID LCOLC RCOLC
    (10) type -> . NUMBER
    (11) type -> . STRING
    (12) type -> . BOOL

    RPAREN          reduce using rule 86 (empty -> .)
    NUMBER          shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    type                           shift and go to state 26
    paramList                      shift and go to state 38
    paramSeq                       shift and go to state 23
    empty                          shift and go to state 24
    param                          shift and go to state 25

state 28

    (74) varSpecSeq -> varSpec COMMA varSpecSeq .

    SEMICOLON       reduce using rule 74 (varSpecSeq -> varSpec COMMA varSpecSeq .)


state 29

    (7) varSpec -> ID ASSIGN literal .

    COMMA           reduce using rule 7 (varSpec -> ID ASSIGN literal .)
    SEMICOLON       reduce using rule 7 (varSpec -> ID ASSIGN literal .)


state 30

    (64) literal -> CONST_NUMBER .

    COMMA           reduce using rule 64 (literal -> CONST_NUMBER .)
    SEMICOLON       reduce using rule 64 (literal -> CONST_NUMBER .)
    RBRACE          reduce using rule 64 (literal -> CONST_NUMBER .)
    PLUS            reduce using rule 64 (literal -> CONST_NUMBER .)
    MINUS           reduce using rule 64 (literal -> CONST_NUMBER .)
    MULTIPLY        reduce using rule 64 (literal -> CONST_NUMBER .)
    DIVIDE          reduce using rule 64 (literal -> CONST_NUMBER .)
    MOD             reduce using rule 64 (literal -> CONST_NUMBER .)
    EQ              reduce using rule 64 (literal -> CONST_NUMBER .)
    DIFF            reduce using rule 64 (literal -> CONST_NUMBER .)
    LE              reduce using rule 64 (literal -> CONST_NUMBER .)
    GE              reduce using rule 64 (literal -> CONST_NUMBER .)
    GT              reduce using rule 64 (literal -> CONST_NUMBER .)
    LT              reduce using rule 64 (literal -> CONST_NUMBER .)
    AND             reduce using rule 64 (literal -> CONST_NUMBER .)
    OR              reduce using rule 64 (literal -> CONST_NUMBER .)
    INTERROGATION   reduce using rule 64 (literal -> CONST_NUMBER .)
    RPAREN          reduce using rule 64 (literal -> CONST_NUMBER .)
    RCOLC           reduce using rule 64 (literal -> CONST_NUMBER .)
    COLON           reduce using rule 64 (literal -> CONST_NUMBER .)


state 31

    (65) literal -> CONST_STRING .

    COMMA           reduce using rule 65 (literal -> CONST_STRING .)
    SEMICOLON       reduce using rule 65 (literal -> CONST_STRING .)
    RBRACE          reduce using rule 65 (literal -> CONST_STRING .)
    PLUS            reduce using rule 65 (literal -> CONST_STRING .)
    MINUS           reduce using rule 65 (literal -> CONST_STRING .)
    MULTIPLY        reduce using rule 65 (literal -> CONST_STRING .)
    DIVIDE          reduce using rule 65 (literal -> CONST_STRING .)
    MOD             reduce using rule 65 (literal -> CONST_STRING .)
    EQ              reduce using rule 65 (literal -> CONST_STRING .)
    DIFF            reduce using rule 65 (literal -> CONST_STRING .)
    LE              reduce using rule 65 (literal -> CONST_STRING .)
    GE              reduce using rule 65 (literal -> CONST_STRING .)
    GT              reduce using rule 65 (literal -> CONST_STRING .)
    LT              reduce using rule 65 (literal -> CONST_STRING .)
    AND             reduce using rule 65 (literal -> CONST_STRING .)
    OR              reduce using rule 65 (literal -> CONST_STRING .)
    INTERROGATION   reduce using rule 65 (literal -> CONST_STRING .)
    RPAREN          reduce using rule 65 (literal -> CONST_STRING .)
    RCOLC           reduce using rule 65 (literal -> CONST_STRING .)
    COLON           reduce using rule 65 (literal -> CONST_STRING .)


state 32

    (66) literal -> TRUE .

    COMMA           reduce using rule 66 (literal -> TRUE .)
    SEMICOLON       reduce using rule 66 (literal -> TRUE .)
    RBRACE          reduce using rule 66 (literal -> TRUE .)
    PLUS            reduce using rule 66 (literal -> TRUE .)
    MINUS           reduce using rule 66 (literal -> TRUE .)
    MULTIPLY        reduce using rule 66 (literal -> TRUE .)
    DIVIDE          reduce using rule 66 (literal -> TRUE .)
    MOD             reduce using rule 66 (literal -> TRUE .)
    EQ              reduce using rule 66 (literal -> TRUE .)
    DIFF            reduce using rule 66 (literal -> TRUE .)
    LE              reduce using rule 66 (literal -> TRUE .)
    GE              reduce using rule 66 (literal -> TRUE .)
    GT              reduce using rule 66 (literal -> TRUE .)
    LT              reduce using rule 66 (literal -> TRUE .)
    AND             reduce using rule 66 (literal -> TRUE .)
    OR              reduce using rule 66 (literal -> TRUE .)
    INTERROGATION   reduce using rule 66 (literal -> TRUE .)
    RPAREN          reduce using rule 66 (literal -> TRUE .)
    RCOLC           reduce using rule 66 (literal -> TRUE .)
    COLON           reduce using rule 66 (literal -> TRUE .)


state 33

    (67) literal -> FALSE .

    COMMA           reduce using rule 67 (literal -> FALSE .)
    SEMICOLON       reduce using rule 67 (literal -> FALSE .)
    RBRACE          reduce using rule 67 (literal -> FALSE .)
    PLUS            reduce using rule 67 (literal -> FALSE .)
    MINUS           reduce using rule 67 (literal -> FALSE .)
    MULTIPLY        reduce using rule 67 (literal -> FALSE .)
    DIVIDE          reduce using rule 67 (literal -> FALSE .)
    MOD             reduce using rule 67 (literal -> FALSE .)
    EQ              reduce using rule 67 (literal -> FALSE .)
    DIFF            reduce using rule 67 (literal -> FALSE .)
    LE              reduce using rule 67 (literal -> FALSE .)
    GE              reduce using rule 67 (literal -> FALSE .)
    GT              reduce using rule 67 (literal -> FALSE .)
    LT              reduce using rule 67 (literal -> FALSE .)
    AND             reduce using rule 67 (literal -> FALSE .)
    OR              reduce using rule 67 (literal -> FALSE .)
    INTERROGATION   reduce using rule 67 (literal -> FALSE .)
    RPAREN          reduce using rule 67 (literal -> FALSE .)
    RCOLC           reduce using rule 67 (literal -> FALSE .)
    COLON           reduce using rule 67 (literal -> FALSE .)


state 34

    (8) varSpec -> ID LCOLC NUMBER . RCOLC
    (9) varSpec -> ID LCOLC NUMBER . RCOLC ASSIGN LBRACE literalSeq RBRACE

    RCOLC           shift and go to state 39


state 35

    (3) dec -> FUNC ID LPAREN paramList RPAREN . ARROW LBRACE block RBRACE

    ARROW           shift and go to state 40


state 36

    (70) paramSeq -> param COMMA . paramSeq
    (70) paramSeq -> . param COMMA paramSeq
    (71) paramSeq -> . param
    (13) param -> . type ID
    (14) param -> . type ID LCOLC RCOLC
    (10) type -> . NUMBER
    (11) type -> . STRING
    (12) type -> . BOOL

    NUMBER          shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    param                          shift and go to state 25
    paramSeq                       shift and go to state 41
    type                           shift and go to state 26

state 37

    (13) param -> type ID .
    (14) param -> type ID . LCOLC RCOLC

    COMMA           reduce using rule 13 (param -> type ID .)
    RPAREN          reduce using rule 13 (param -> type ID .)
    SEMICOLON       reduce using rule 13 (param -> type ID .)
    PLUS            reduce using rule 13 (param -> type ID .)
    MINUS           reduce using rule 13 (param -> type ID .)
    MULTIPLY        reduce using rule 13 (param -> type ID .)
    DIVIDE          reduce using rule 13 (param -> type ID .)
    MOD             reduce using rule 13 (param -> type ID .)
    EQ              reduce using rule 13 (param -> type ID .)
    DIFF            reduce using rule 13 (param -> type ID .)
    LE              reduce using rule 13 (param -> type ID .)
    GE              reduce using rule 13 (param -> type ID .)
    GT              reduce using rule 13 (param -> type ID .)
    LT              reduce using rule 13 (param -> type ID .)
    AND             reduce using rule 13 (param -> type ID .)
    OR              reduce using rule 13 (param -> type ID .)
    INTERROGATION   reduce using rule 13 (param -> type ID .)
    RCOLC           reduce using rule 13 (param -> type ID .)
    COLON           reduce using rule 13 (param -> type ID .)
    LCOLC           shift and go to state 42


state 38

    (4) dec -> FUNC type ID LPAREN paramList . RPAREN ARROW LBRACE block RBRACE

    RPAREN          shift and go to state 43


state 39

    (8) varSpec -> ID LCOLC NUMBER RCOLC .
    (9) varSpec -> ID LCOLC NUMBER RCOLC . ASSIGN LBRACE literalSeq RBRACE

    COMMA           reduce using rule 8 (varSpec -> ID LCOLC NUMBER RCOLC .)
    SEMICOLON       reduce using rule 8 (varSpec -> ID LCOLC NUMBER RCOLC .)
    ASSIGN          shift and go to state 44


state 40

    (3) dec -> FUNC ID LPAREN paramList RPAREN ARROW . LBRACE block RBRACE

    LBRACE          shift and go to state 45


state 41

    (70) paramSeq -> param COMMA paramSeq .

    RPAREN          reduce using rule 70 (paramSeq -> param COMMA paramSeq .)


state 42

    (14) param -> type ID LCOLC . RCOLC

    RCOLC           shift and go to state 46


state 43

    (4) dec -> FUNC type ID LPAREN paramList RPAREN . ARROW LBRACE block RBRACE
